--- a/template/home.tmpl
+++ b/template/home.tmpl
@@ -46,7 +46,7 @@
         </div>
         <button type="submit" class="btn btn-primary">링크 만들기</button>
         <br>
-        {{ if ne .token ""}}{{ if eq .vaildToken false}}
+        {{ if ne .token ":token"}}{{ if eq .vaildToken false}}
         <small class="text-danger">잘못된 토큰입니다. 현재 특정 사용자만 사용하고 있습니다. 필요하시면 연락주세요. jeongzu@gmail.com</small>
         {{ end }}{{ end }}
       </form>
